--- a/style.css
+++ b/style.css
@@ -144,6 +144,14 @@ nav ul li a{
 button:active{
 	transform:scale(1.1);
 }
+.webs{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    color: #3e3d3d;
+    font-size: 30px;
+    line-height: 0px;
+    margin-left: 10%;
+}
 .interest{
     height: 500px;
     background-color: #FFFFFF;
